# school_logging

./: log.py  pyproject.toml
example/: example.py
school_logging/: log.py
