[build-system]
requires = ["setuptools>=61.0",
            "build"]
build-backend = "setuptools.build_meta"

[project]
name = "school_logging"
version = "0.1.0"
authors = [
    {name = "Alexey Obukhov", email = "alexey.obukhov@hotmail.com"},
]
description = "A custom logging module with colored output."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # Choose a license
    "Operating System :: OS Independent",
]
dependencies = []  # Add dependencies here if your logger needs them

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/vertok/school_logging"

[tool.setuptools]
packages = ["school_logging"]
